--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/frontend/src/assets/css/index.css">
+    <link rel="stylesheet" href="frontend/src/assets/css/index.css">
     <!-- Imports icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- link dos icons "https://fontawesome.com/icons" -->
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/a1ed9ba945.js" crossorigin="anonymous"></script>
     <!-- Fundo animado -->
   <video autoplay loop muted id="background-video">
-    <source src="/frontend/src/assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
+  <source src="/assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
   </video>
 
@@ -25,7 +25,7 @@
         </div>
         <div class="start-button" onclick="click">
             <p><i class="fa-solid fa-arrow-down"></i>Teste seu conhecimento Dev!<i class="fa-solid fa-arrow-down"></i></p>
-            <a href="quiz.html">Jogar</a>
+            <a href="/frontend/src/templates/quiz.html">Jogar</a>
         </div>
     </section>
   </div>
